--- a/Ecommerce-Frontend/package.json
+++ b/Ecommerce-Frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.8",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "6pp": "^1.3.8",
     "axios": "^1.7.7",
     "chart.js": "^4.4.3",
