fix issues regarding discount

--- a/Ecommerce-backend/.env_sample
+++ b/Ecommerce-backend/.env_sample
@@ -1,6 +1,7 @@
 PORT= YOUR_PORT
 MONGO_URI = YOUR_MONGOURL
-STRIPE_KEY = YOUR_STRIPEKEY
+RAZORPAY_KEY_ID =YOUR_RAZORPAY_ID
+RAZORPAY_SECRET_KEY =YOUR_RAZORPAY_SECRET_KEY
 CLIENT_URL = YOUR_CLIENTURL
 REDIS_URL = YOUR_REDIS_URL
 
