--- a/Ecommerce-backend/package.json
+++ b/Ecommerce-backend/package.json
@@ -15,30 +15,33 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "ioredis": "^5.4.1",
-    "mongoose": "^8.5.2",
+    "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
-    "razorpay": "^2.9.5",
-    "redis": "^4.7.0",
-    "stripe": "^16.9.0",
+    "razorpay": "^2.9.6",
+    "redis": "^4.7.1",
+    "stripe": "^16.12.0",
     "uuid": "^10.0.0",
-    "validator": "^13.12.0"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.11",
-    "@types/node": "^22.1.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^22.16.0",
+    "@types/redis": "^4.0.11",
+    "@types/stripe": "^8.0.417",
     "@types/uuid": "^10.0.0",
-    "@types/validator": "^13.12.0",
+    "@types/validator": "^13.15.2",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.4"
   }
