--- a/Ecommerce-backend/package.json
+++ b/Ecommerce-backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node dist/app.js",
-    "build": "tsc",
+    "build": "npm install && tsc",
     "watch": "tsc -w",
     "dev": "nodemon dist/app.ts"
   },
