--- a/Ecommerce-backend/.env_sample
+++ b/Ecommerce-backend/.env_sample
@@ -8,3 +8,4 @@ REDIS_URL = YOUR_REDIS_URL
 CLOUD_NAME= YOUR_CLOUDNAME
 CLOUD_API_KEY=YOUR_CLOUD_API_KEY
 CLOUD_API_SECRET=YOUR_API_SECRET
+FIREBASE_URL =YOUR_FIREBASE_URL
